fix: margin adjustments

--- a/random-quote-generator/style.css
+++ b/random-quote-generator/style.css
@@ -19,7 +19,11 @@ html {
 
 .heading-secondary {
   font-size: 2rem;
-  margin-bottom: 10rem;
+  margin-bottom: 5rem;
+}
+
+.quote {
+  margin-bottom: 5rem;
 }
 
 .btn {
